Fixes footer gap when last element on page above is a highlight panel

--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -10,7 +10,7 @@ footer {
     @include mixins.highlight(black)
   }
 
-  .highlight + & {
+  main:has(> .highlight:last-child) + & {
     margin-top: 0;
   }
 
